--- a/app/src/main/res/layout/activity_on_boarding_one.xml
+++ b/app/src/main/res/layout/activity_on_boarding_one.xml
@@ -7,7 +7,8 @@
     android:layout_height="match_parent"
     tools:context=".onBoardingOneActivity"
     android:orientation="vertical"
-    android:gravity="center">
+    android:gravity="center"
+    android:background="@color/background">
 
     <ImageView
         android:id="@+id/splashScreenImage"
