--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -4,6 +4,7 @@
         <!-- Customize your light theme here. -->
         <!-- <item name="colorPrimary">@color/my_light_primary</item> -->
     </style>
+    <style name="Theme.MDCComponents" parent="Theme.MaterialComponents.DayNight.DarkActionBar"/>
 
     <style name="Theme.Polannews" parent="Base.Theme.Polannews" />
 </resources>
